content shift hopefully fixed

--- a/MainLook.css
+++ b/MainLook.css
@@ -152,7 +152,7 @@ img{
     top: -70px;
     left: 1%;
 }
-#theater, #code{
+#theater, #code, #index{
     position:relative;
     top: 80px;
     width: 100%;
